--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "bot-ws-plugin-openai": "^1.0.6",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "nodemailer": "^6.9.8",
         "openai": "^4.24.1",
         "paypal-rest-sdk": "^1.8.1",
         "wa-sticker-formatter": "4.3.2"
