--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
         "@bot-whatsapp/provider": "latest",
         "@whiskeysockets/baileys": "^6.5.0",
         "bot-ws-plugin-openai": "^1.0.6",
+        "chrono-node": "^2.7.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "googleapis": "^131.0.0",
         "nodemailer": "^6.9.8",
         "openai": "^4.24.1",
         "paypal-rest-sdk": "^1.8.1",
